--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css"  href="styles.css">
 </head>
 <body>
-    <h1>Weather in your location</h1>
+    <h1>Weather in <span id="city-name"></span></h1>
+
     <div id="weather-info"></div>
 
     <script src="script.js"></script>
