--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" type="text/css"  href="styles.css">
 </head>
 <body>
+    <div class="title-wrapper">
     <h1>Weather in <span id="city-name"></span></h1>
-
+</div>
     <div id="weather-info"></div>
 
     <script src="script.js"></script>
