--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" type="text/css"  href="styles.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="./css/weather-icons.min.css">
+
 </head>
 <body>
     <div class="title-wrapper">
-    <h1>Weather in <span id="city-name"></span></h1>
-</div>
-    <div id="weather-info"></div>
+        <h1>Weather in <span id="city-name"></span></h1>
+    </div>
 
+    <div id="weather-info">
+        <i id="weather-icon" class="wi"></i>
+        <p id="weather-description"></p>
+        <p id="temperature"></p>
+    </div>
+  
     <script src="script.js"></script>
 </body>
 </html>
