--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather</title>
-    <link rel="stylesheet" type="text/css"  href="styles.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="./css/weather-icons.min.css">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="title-wrapper">
-        <h1>Weather in <span id="city-name"></span></h1>
-    </div>
+  <div class="title-wrapper">
+    <h1>Weather in <span id="city-name"></span></h1>
+  </div>
 
-    <div id="weather-info">
-        <i id="weather-icon" class="wi"></i>
-        <p id="weather-description"></p>
-        <p id="temperature"></p>
+  <div id="weather-info">
+    <i id="weather-icon" class="fas"></i>
+    <div class="weather-details">
+      <p id="weather-description"></p>
+      <p id="temperature"></p>
+      <p id="humidity"></p>
+      <p id="wind-speed"></p>
+      <p id="pressure"></p>
     </div>
-  
-    <script src="script.js"></script>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
