--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="script.js" defer></script>
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <body>
   <div id="header">
     <div class="date-time">
